--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,8 @@ opencv-python
 Pillow
 psutil
 pytz
-pyrogram==2.0.80
+https://github.com/KurimuzonAkuma/pyrogram.git
+#pyrogram==2.0.80
 #https://github.com/TelegramPlayGround/pyrogram/archive/unknown_errors.zip
 requests
 tgcrypto
