--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ opencv-python
 Pillow
 psutil
 pytz
-git+https://github.com/KurimuzonAkuma/pyrogram.git
-#pyrogram==2.0.80
+#https://github.com/KurimuzonAkuma/pyrogram.git
+pyrogram==2.0.80
 #https://github.com/TelegramPlayGround/pyrogram/archive/unknown_errors.zip
 requests
 tgcrypto
